--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div class="content-1">
         <!-- container 1 -->
         <div class="list">
-            <h1 class="tit">List of Vehicles</h1>
+            <h1 class="tit">Live</h1>
+            <h2 class="rep">List of Vehicles</h2>
             <div class="tab">
                 <table class="st">
                     <thead>
@@ -105,6 +106,9 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>            
+            <div class="map">
+                <iframe id="mapset" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31113.345040921085!2d80.20725856963185!3d12.896908217904418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525b79de7f381b%3A0xffbb2dd48afe3f1b!2sSholinganallur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1638864580816!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
 
@@ -130,7 +134,7 @@
                 <tr>
                     <td>Vehicle Colour</td>
                     <td id="color">White</td>
-                    
+
                 </tr>
                 <tr>
                     <td>Manufacturer</td>
@@ -141,9 +145,6 @@
                     <td id="model">Fortuner</td>
                 </tr>               
             </table>
-            <div class="map">
-                <iframe id="mapset" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31113.345040921085!2d80.20725856963185!3d12.896908217904418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525b79de7f381b%3A0xffbb2dd48afe3f1b!2sSholinganallur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1638864580816!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
         </div>        
     </div>
 </body>
