included Floating header, box shadow

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         <div class="list">
             <h1 class="tit">Live</h1>
             <h2 class="rep">List of Vehicles</h2>
+            <h4><span class="num">Plate No</span><span class="typ">Type</span></h4>
             <div class="tab">
                 <table class="st">
-                    <thead>
+                    <!-- <thead>
                         <tr>
                             <th class="number">Plate No</th>
                             <th class="type">Type</th>
                         </tr>
-                    </thead>
+                    </thead> -->
                     <tbody id="table-insert">
                         <tr>
                             <td>iajlsdf</td>
@@ -125,26 +126,32 @@
         <!-- container 3 -->
         <div class="pic">
             <h1 class="tit">Vehicle</h1>
-            <h2 class="rep">Generated Report</h2>
-            <table class="info">
-                <tr>
-                    <td>Location</td>
-                    <td id="location">Sholinganallur</td>
-                </tr>
-                <tr>
-                    <td>Vehicle Colour</td>
-                    <td id="color">White</td>
+            <div class="con">                
+                <h2 class="rep gr">Generated Report</h2>
+                <table class="info">
+                    <tr>
+                        <td>Location</td>
+                        <td id="location">Sholinganallur</td>
+                    </tr>
+                    <tr>
+                        <td>Vehicle Colour</td>
+                        <td id="color">White</td>
 
-                </tr>
-                <tr>
-                    <td>Manufacturer</td>
-                    <td id="manufacturer">Toyota</td>
-                </tr>
-                <tr>
-                    <td>Model</td>
-                    <td id="model">Fortuner</td>
-                </tr>               
-            </table>
+                    </tr>
+                    <tr>
+                        <td>Manufacturer</td>
+                        <td id="manufacturer">Toyota</td>
+                    </tr>
+                    <tr>
+                        <td>Model</td>
+                        <td id="model">Fortuner</td>
+                    </tr>      
+                    <tr>
+                        <td>Flags</td>
+                        <td id="flag">None</td>
+                    </tr>           
+                </table>
+            </div>
         </div>        
     </div>
 </body>
@@ -160,4 +167,5 @@
     Manufacturer                            : #manufacturer
     Model                                   : #model
     iframe map                              : #mapset
+    flags                                   : #flag
  -->
