--- a/index.html
+++ b/index.html
@@ -22,16 +22,10 @@
         <!-- container 1 -->
         <div class="list">
             <h1 class="tit">Live</h1>
-            <h2 class="rep">List of Vehicles</h2>
+            <h2 class="rep rep1">List of Vehicles</h2>
             <h4><span class="num">Plate No</span><span class="typ">Type</span></h4>
             <div class="tab">
                 <table class="st">
-                    <!-- <thead>
-                        <tr>
-                            <th class="number">Plate No</th>
-                            <th class="type">Type</th>
-                        </tr>
-                    </thead> -->
                     <tbody id="table-insert">
                         <tr>
                             <td>iajlsdf</td>
