--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <header>
     <div class="nav-bar">
         <div class="team">
-            Team Name - <span>NAV &nbsp;&nbsp;</span><br>
-            Idea Title - <span>NAV &nbsp;TRAF</span><br>
-            PS - ID - <span>INTL-IVA-01</span>
+            <span>Team Name - NAV </span>
+            <span>Idea Title - NAV TRAF</span>
+            <span>PS - ID - INTL-IVA-01</span>
         </div>
         <img src="https://manthan.mic.gov.in/assets/new_logo.png" alt="manthan-logo"/>        
     </div>
@@ -21,107 +21,81 @@
     <div class="content-1">
         <!-- container 1 -->
         <div class="list">
-            <h1 class="tit">Live</h1>
-            <h2 class="rep rep1">List of Vehicles</h2>
-            <h4><span class="num">Plate No</span><span class="typ">Type</span></h4>
+            <h4><span class="num">Plate No</span><span class="typ">Category</span></h4>
             <div class="tab">
                 <table class="st">
                     <tbody id="table-insert">
+                        <tr class="selected">
+                            <td>MH01JA8300</td>
+                            <td>Car</td>
+                        </tr>
                         <tr>
-                            <td>iajlsdf</td>
+                            <td>TN22AB9519</td>
+                            <td>Two Wheeler</td>
+                        </tr>
+                        <tr>
+                            <td>KL47F7878</td>
                             <td>car</td>
                         </tr>
                         <tr>
-                            <td>iajlsdf 2</td>
+                            <td>TN76AZ1197</td>
                             <td>car</td>
                         </tr>
                         <tr>
-                            <td>iajlsdf 3</td>
+                            <td>TN06X4685</td>
+                            <td>Three Wheeler</td>
+                        </tr>
+                        <tr>
+                            <td>MH14DX3680</td>
+                            <td>Two Wheeler</td>
+                        </tr>
+                        <tr>
+                            <td>TN01JA1300</td>
+                            <td>Car</td>
+                        </tr>
+                        <tr>
+                            <td>TN01AB9712</td>
+                            <td>Two Wheeler</td>
+                        </tr>
+                        <tr>
+                            <td>KL47F4818</td>
                             <td>car</td>
                         </tr>
                         <tr>
-                            <td>iajlsdf 4</td>
+                            <td>TN16AC1107</td>
                             <td>car</td>
                         </tr>
                         <tr>
-                            <td>iajlsdf 5</td>
-                            <td>car</td>
+                            <td>TN07B4675</td>
+                            <td>Three Wheeler</td>
                         </tr>
                         <tr>
-                            <td>iajlsdf 6</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 2</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 3</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 4</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 5</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 6</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 2</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 3</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 4</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 5</td>
-                            <td>car</td>
-                        </tr>
-                        <tr>
-                            <td>iajlsdf 6</td>
-                            <td>car</td>
+                            <td>MH15DB1580</td>
+                            <td>Two Wheeler</td>
                         </tr>
                     </tbody>
                 </table>
             </div>            
             <div class="map">
                 <iframe id="mapset" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31113.345040921085!2d80.20725856963185!3d12.896908217904418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525b79de7f381b%3A0xffbb2dd48afe3f1b!2sSholinganallur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1638864580816!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <h3>Last Seen Location</h3>
             </div>
         </div>
 
         <!-- Container 2 -->
         <div class="veh-details">
-            <h1 class="tit">Event</h1>
             <div class="plate-details">
-                <h3 class="cen">Recognised Plate</h3>
+                <h3 class="cen">Recognised Plate Number</h3>
                 <h2 class="cen" id="plate-no">MH 01 JA 8300</h2>
             </div>
-            <img id="vehicle-snap" src="Asset/car.jpg" alt="Vehicle-snap"/>                        
+            <img id="vehicle-snap" src="Asset/car.jpg" alt="Vehicle-snap"/>
+            <h3>Snap Of Selected Vehicle</h3>                        
         </div>
 
         <!-- container 3 -->
         <div class="pic">
-            <h1 class="tit">Vehicle</h1>
             <div class="con">                
-                <h2 class="rep gr">Generated Report</h2>
+                <h2 class="rep">Generated Report</h2>
                 <table class="info">
                     <tr>
                         <td>Location</td>
@@ -129,7 +103,7 @@
                     </tr>
                     <tr>
                         <td>Vehicle Colour</td>
-                        <td id="color">White</td>
+                        <td id="color">Bronze</td>
 
                     </tr>
                     <tr>
@@ -138,11 +112,23 @@
                     </tr>
                     <tr>
                         <td>Model</td>
-                        <td id="model">Fortuner</td>
+                        <td id="model">Innova</td>
                     </tr>      
                     <tr>
-                        <td>Flags</td>
-                        <td id="flag">None</td>
+                        <td>Violations</td>
+                        <td id="violations">None</td>
+                    </tr> 
+                    <tr>
+                        <td>Type of Plate</td>
+                        <td id="type">Commercial</td>
+                    </tr> 
+                    <tr>
+                        <td>Last Seen</td>
+                        <td id="ls">CAM-TN-506</td>
+                    </tr> 
+                    <tr>
+                        <td>Body Type</td>
+                        <td id="btype">Mini-Van</td>
                     </tr>           
                 </table>
             </div>
@@ -161,5 +147,8 @@
     Manufacturer                            : #manufacturer
     Model                                   : #model
     iframe map                              : #mapset
-    flags                                   : #flag
+    Violations                              : #violations
+    Type of Plate                           : #type
+    Last Seen                               : #ls
+    Body Type                               : #btype
  -->
