--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <script>
         set(0);
     </script>
+    <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "siqc39259ddabb7bd17f221e5f61a57bd5b9bca2d9096dd76c9af83fd832bd3aa12", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.localzoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 </body>
 </html>
 
